# sure-shot

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  server.ts  tsconfig.json  vite.config.ts
.github/instructions/: instruction.instructions.md
apps/carbine/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/carbine/scripts/: README.md  sign-apk.ps1
apps/carbine/src/: App.css  App.scss  App.tsx  config.ts  index.tsx
apps/carbine/src-tauri/: .taurignore  Cargo.toml  carbine-config.json  tauri.conf.json
apps/carbine/src-tauri/capabilities/: default.json  mobile.json
apps/carbine/src-tauri/icons/: icon.icns
apps/carbine/src-tauri/icons_additional/: icon.icns
apps/carbine/src-tauri/src/: lib.rs  main.rs
apps/carbine/src/api/: getLocalIp.ts  hostApi.ts  tryLogin.ts
apps/carbine/src/components/: LoginForm.tsx
apps/carbine/src/inquiry/: updateServerList.ts
apps/carbine/src/routes/: home.tsx  login.tsx  setup.tsx
apps/carbine/src/store/: GlobalStore.ts  PersistData.ts
apps/carbine/src/styles/: login.css  main.css  setup.scss
apps/carbine/src/utils/: AttachmentUtils.ts  FileUtils.ts  PlatformUtils.ts  getDeviceName.ts  useAuthRedirect.tsx
apps/magazine/: README.md  package.json
apps/magazine/src-tauri/: Cargo.toml  tauri.conf.json
apps/magazine/src-tauri/src/: main.rs
apps/sidearm/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wxt.config.ts
apps/sidearm/entrypoints/: background.ts
apps/sidearm/entrypoints/popup/: App.css  App.tsx  main.tsx
apps/sidearm/src/api/: browserHostApi.ts
browser_extension/wxt-dev-wxt/: package.json  pnpm-lock.yaml  wxt.config.ts
browser_extension/wxt-dev-wxt/entrypoints/: background.ts
plugins/tauri-plugin-carbine-notifications/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
plugins/tauri-plugin-carbine-notifications/android/: build.gradle.kts  local.properties
plugins/tauri-plugin-carbine-notifications/guest-js/: index.ts
plugins/tauri-plugin-carbine-notifications/ios/: Package.swift  README.md
plugins/tauri-plugin-carbine-notifications/permissions/: default.toml
plugins/tauri-plugin-carbine-notifications/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
server/: Cargo.toml  sure-shot-config.toml  typeshare.toml
server/src/: lib.rs  main.rs  main_new.rs  message_store.rs  server_manager.rs  whoami.rs
server/src/internal/: events.rs  mod.rs  nickname.rs  send.rs
server/src/ui/: mod.rs
src/: App.scss  App.tsx  Consts.ts  config.ts  entry-client.tsx  entry-server.tsx  getIpAddress.ts
src/api/events/: useEventsSource.ts
src/api/messages/: get.ts  send.ts
src/api/nickname/: get.ts  update.ts
src/components/: MessageInput.tsx  MessageList.tsx  NicknameSettings.tsx  ServerList.tsx
src/components/common/: LinkifiedText.tsx
src/components/messages/: MessageInput.tsx  MessageList.tsx
src/components/server_list/: ServerList.tsx
src/inquiry/: fetchSelf.ts  findAvailablePorts.ts  sendMessage.ts  updateServerList.ts
src/store/: GlobalStore.ts
src/types/: PingResponse.ts
src/utils/: FileUtils.ts  IdUtils.ts  linkUtils.ts  serverUtils.ts
(+60 files in other folders)
