[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
local-ip-address = "0.6.5"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.133"
socket2 = "0.5.10"
tokio = { version = "1.46.0", features = ["sync"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["cors"] }
typeshare = "1.0.4"
futures-util = "0.3.31"

[build-dependencies]
typeshare = "1.0.4"
